[tool.poetry]
name = "mercylog_tutorial"
version = "0.1.0"
description = "Tutorial for mercylog"
authors = ["Rajiv Abraham <rajiv.abraham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
mercylog = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
